<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weight</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="back">全部放回</string>
    <string name="weight">称重</string>
    <string name="finish">查看结果</string>
    <string name="again">再来一次</string>
    <string name="light">偏轻</string>
    <string name="heavy">偏重</string>
    <string name="special">特殊球</string>

</resources>