<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cce8cf"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityMain" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/tv_1"
            style="@style/Digit"
            android:text="@string/digit_1" />

        <TextView
            android:id="@+id/tv_2"
            style="@style/Digit"
            android:text="@string/digit_2" />

        <TextView
            android:id="@+id/tv_3"
            style="@style/Digit"
            android:text="@string/digit_3" />

        <TextView
            android:id="@+id/tv_4"
            style="@style/Digit"
            android:text="@string/digit_4" />

        <TextView
            android:id="@+id/tv_5"
            style="@style/Digit"
            android:text="@string/digit_5" />

        <TextView
            android:id="@+id/tv_6"
            style="@style/Digit"
            android:text="@string/digit_6" />

        <TextView
            android:id="@+id/tv_7"
            style="@style/Digit"
            android:text="@string/digit_7" />

        <TextView
            android:id="@+id/tv_8"
            style="@style/Digit"
            android:text="@string/digit_8" />

        <TextView
            android:id="@+id/tv_9"
            style="@style/Digit"
            android:text="@string/digit_9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_balance"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/disk"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_left_1"
                style="@style/DigitDisk"
                android:text="@string/digit_1" />

            <TextView
                android:id="@+id/tv_left_2"
                style="@style/DigitDisk"
                android:text="@string/digit_2" />

            <TextView
                android:id="@+id/tv_left_3"
                style="@style/DigitDisk"
                android:text="@string/digit_3" />

            <TextView
                android:id="@+id/tv_left_4"
                style="@style/DigitDisk"
                android:text="@string/digit_4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/disk"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_right_1"
                style="@style/DigitDisk"
                android:text="@string/digit_1" />

            <TextView
                android:id="@+id/tv_right_2"
                style="@style/DigitDisk"
                android:text="@string/digit_2" />

            <TextView
                android:id="@+id/tv_right_3"
                style="@style/DigitDisk"
                android:text="@string/digit_3" />

            <TextView
                android:id="@+id/tv_right_4"
                style="@style/DigitDisk"
                android:text="@string/digit_4" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/btn_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weight" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_time_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_time_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_time_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="#000"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_special"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:text="@string/special"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_special_ball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_special"
            android:background="@drawable/red"
            android:gravity="center"
            android:textColor="#009a3d"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_heavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/heavy"
                android:textColor="#000"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light"
                android:textColor="#000"
                android:textSize="20sp" />
        </RadioGroup>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/again" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/finish" />
    </LinearLayout>

</LinearLayout>